--- a/src/app/inscripcion/inscripcion.new.component.html
+++ b/src/app/inscripcion/inscripcion.new.component.html
@@ -25,81 +25,84 @@
                         {{apellido}} - {{nombre}}
                     </div>    
                 </div>    
-                
-                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
-                    <div class="ui-grid-row">
-                        <div class="ui-grid-col-3">
-                            Periodo Lectivo:
-                        </div>    
-                    </div>    
-
-                    <div class="ui-grid-row">
-                            <div class="ui-grid-col-3">
-                                <p-autoComplete formControlName="periodoLectivo" [suggestions]="filteredPeriodos" 
-                                    (completeMethod)="filterPeriodos($event)" field="anio" [size]="30"
-                                    
-                                    [minLength]="1" [dropdown]="true"></p-autoComplete>
-
-                                
-                            </div>    
-                        </div>                       
+                <div *ngIf="(showLoading$ | async)">
+                    <p-progressSpinner></p-progressSpinner>
                 </div>    
+                <div *ngIf="alumnoId">
+                        <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+                            <div class="ui-grid-row">
+                                <div class="ui-grid-col-3">
+                                    Periodo Lectivo:
+                                </div>    
+                            </div>    
 
-                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
-                        <div class="ui-grid-row">
-                            <div class="ui-grid-col-3">
-                                Turno:
-                            </div>    
-                        </div>    
-    
-                        <div class="ui-grid-row">
-                                <div class="ui-grid-col-3">
-                                    <p-autoComplete formControlName="turno" [suggestions]="filteredTurnos" 
-                                        (completeMethod)="filterTurnos($event)" field="nombre" [size]="30"
-                                        (onSelect)="inscripcionForm.get('curso').setValue(null);inscripcionForm.get('division').setValue(null)"                                        
-                                        [minLength]="1" [dropdown]="true"></p-autoComplete>
-    
-                                    
-                                </div>    
-                            </div>                       
-                 </div>  
+                            <div class="ui-grid-row">
+                                    <div class="ui-grid-col-3">
+                                        <p-autoComplete formControlName="periodoLectivo" [suggestions]="filteredPeriodos" 
+                                            (completeMethod)="filterPeriodos($event)" field="anio" [size]="30"
+                                            
+                                            [minLength]="1" [dropdown]="true"></p-autoComplete>
 
-                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
-                        <div class="ui-grid-row">
-                            <div class="ui-grid-col-3">
-                                Curso:
-                            </div>    
+                                        
+                                    </div>    
+                                </div>                       
                         </div>    
-    
-                        <div class="ui-grid-row">
-                                <div class="ui-grid-col-3">
-                                    <p-autoComplete formControlName="curso" [suggestions]="filteredCursos" 
-                                        (completeMethod)="filterCursos($event)" field="nombre" [size]="30"
-                                        (onSelect)="inscripcionForm.get('division').setValue(null)"        
-                                        [minLength]="1" [dropdown]="true"></p-autoComplete>
-    
-                                    
+
+                        <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+                                <div class="ui-grid-row">
+                                    <div class="ui-grid-col-3">
+                                        Turno:
+                                    </div>    
                                 </div>    
-                            </div>                       
-                 </div>  
-                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
-                        <div class="ui-grid-row">
-                            <div class="ui-grid-col-3">
-                                División:
-                            </div>    
-                        </div>    
-    
-                        <div class="ui-grid-row">
-                                <div class="ui-grid-col-3">
-                                    <p-autoComplete formControlName="division" [suggestions]="filteredDivisiones" 
-                                        (completeMethod)="filterDivisiones($event)" field="nombre" [size]="30"
-                                        [minLength]="1" [dropdown]="true"></p-autoComplete>
-    
-                                    
+            
+                                <div class="ui-grid-row">
+                                        <div class="ui-grid-col-3">
+                                            <p-autoComplete formControlName="turno" [suggestions]="filteredTurnos" 
+                                                (completeMethod)="filterTurnos($event)" field="nombre" [size]="30"
+                                                (onSelect)="inscripcionForm.get('curso').setValue(null);inscripcionForm.get('division').setValue(null)"                                        
+                                                [minLength]="1" [dropdown]="true"></p-autoComplete>
+            
+                                            
+                                        </div>    
+                                    </div>                       
+                        </div>  
+
+                        <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+                                <div class="ui-grid-row">
+                                    <div class="ui-grid-col-3">
+                                        Curso:
+                                    </div>    
                                 </div>    
-                            </div>                       
-                 </div>                                                                                       
-         
+            
+                                <div class="ui-grid-row">
+                                        <div class="ui-grid-col-3">
+                                            <p-autoComplete formControlName="curso" [suggestions]="filteredCursos" 
+                                                (completeMethod)="filterCursos($event)" field="nombre" [size]="30"
+                                                (onSelect)="inscripcionForm.get('division').setValue(null)"        
+                                                [minLength]="1" [dropdown]="true"></p-autoComplete>
+            
+                                            
+                                        </div>    
+                                    </div>                       
+                        </div>  
+                        <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+                                <div class="ui-grid-row">
+                                    <div class="ui-grid-col-3">
+                                        División:
+                                    </div>    
+                                </div>    
+            
+                                <div class="ui-grid-row">
+                                        <div class="ui-grid-col-3">
+                                            <p-autoComplete formControlName="division" [suggestions]="filteredDivisiones" 
+                                                (completeMethod)="filterDivisiones($event)" field="nombre" [size]="30"
+                                                [minLength]="1" [dropdown]="true"></p-autoComplete>
+            
+                                            
+                                        </div>    
+                                    </div>                       
+                        </div>                                                                                       
+                </div>                            
     </p-panel>    
     <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid"  style="margin: 10px 0px">
                 
