--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <layout-header></layout-header>
+<h1>Welcome to smng!</h1>
 <p-toast position="top-left"></p-toast>
 
 <router-outlet></router-outlet>
