--- a/src/app/alumno/alumno.new.component.html
+++ b/src/app/alumno/alumno.new.component.html
@@ -130,7 +130,7 @@
                     </div>
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
-                                <p-autoComplete formControlName="localidad" [suggestions]="filteredLocalidades" 
+                                <p-autoComplete id="localidadId" formControlName="localidad" [suggestions]="filteredLocalidades" 
                                     (completeMethod)="filterLocalidad($event)" field="nombre" [size]="30"
                                      [minLength]="1" [dropdown]="true"
                                     [disabled]="(alumnoForm.get('provincia').errors)"></p-autoComplete>
