--- a/src/app/alumno/alumno.new.component.html
+++ b/src/app/alumno/alumno.new.component.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
-                                <!--input  type="text" style="width:100%" pInputText   [pKeyFilter]="blockSpecial" [pValidateOnly]="false" formControlName="nombre" /-->
+                                
                                 <p-calendar  formControlName="fechaNacimientoUnbinding" [locale]="es"  [monthNavigator]="true" [yearNavigator]="true" yearRange="1990:2030" dateFormat="dd/mm/yy"  [showIcon]="true"></p-calendar>
                         </div>
                         <div class="ui-grid-col-4">
@@ -149,7 +149,7 @@
                 <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">   
                     <div class="ui-grid-row">
                         <div class="ui-grid-col-2">
-                            Dircción *:
+                            Dirección *:
                         </div>
                     </div>
                     <div class="ui-grid-row">    
