end test and inheritance

--- a/src/app/alumno/alumno.new.component.html
+++ b/src/app/alumno/alumno.new.component.html
@@ -397,7 +397,7 @@
             <div class="ui-grid-row">        
 
                 <div class="ui-grid-col-4">
-                     <button pButton style="width:100%"  type="submit" label="Confirmar" [disabled]="!alumnoForm.valid"></button>
+                     <button id="buttonConfirmId" pButton style="width:100%"  type="submit" label="Confirmar" [disabled]="!alumnoForm.valid"></button>
                 </div>
                 <div class="ui-grid-col-4"></div>
             </div>    
