--- a/src/app/inscripcion/inscripcion.list.component.html
+++ b/src/app/inscripcion/inscripcion.list.component.html
@@ -16,15 +16,21 @@
                 </div>
                 
                 <div class="ui-grid-col-2" style="display: inline-flex">
-                    <p-dropdown [options]="filterOptions" [(ngModel)]="filterKey" placeholder="Filtrar Por" (onChange)="onSortChange($event)" ></p-dropdown>
+                    <p-dropdown [options]="filterOptions" [(ngModel)]="filterKey" placeholder="Filtrar Por" 
+                        (onChange)="onFilterChange($event)">
+                    
+                    </p-dropdown>
 
                 </div>                    
                 
                 <div class="ui-grid-col-3">
-                    <div style="position:relative">
-                        <input type="text"  [formControl]="searchControl"  placeholder="Filtro" />
+                    <div  *ngIf="filterKey!='fecha' && filterKey!='dni'" class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon"><i class="fa fa-search" aria-hidden="true"></i></span>
+                        <input type="text" pInputText   [formControl]="searchControl"  placeholder="Filtro" />
                         
                     </div>
+                    <p-inputMask *ngIf="filterKey=='dni'"  [formControl]="searchDni"  mask="99.999.999" ></p-inputMask>
+                    <p-inputMask *ngIf="filterKey=='dni'"  [formControl]="searchFecha"  mask="99.999.999" ></p-inputMask>
                 </div>
                 <!--div class="ui-g-6 ui-md-4" style="text-align:right">
                     <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
