--- a/src/app/inscripcion/inscripcion.list.component.html
+++ b/src/app/inscripcion/inscripcion.list.component.html
@@ -41,11 +41,16 @@
                              dateFormat="dd/mm/yy"  
                             [showIcon]="true">
                         </p-calendar>    
+                    </div>    
+                    <div class="ui-grid-col-3">
+                            <a href="#" #printInsc> <i class="fa fa-print fa-2x"></i></a>
+                    
                         
-                        
-                    </div>
+                    </div>    
+
                     
                 </div>            
+
                 <!--div class="ui-g-6 ui-md-4" style="text-align:right">
                     <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
                 </div-->
