--- a/src/app/inscripcion/inscripcion.list.component.html
+++ b/src/app/inscripcion/inscripcion.list.component.html
@@ -42,14 +42,15 @@
                             [showIcon]="true">
                         </p-calendar>    
                     </div>    
-                    <div class="ui-grid-col-3">
-                            <a href="#" #printInsc> <i class="fa fa-print fa-2x"></i></a>
-                    
-                        
-                    </div>    
+  
 
                     
-                </div>            
+                </div>   
+                <div class="ui-grid-col-3">
+                        <a href="#" #printInsc > <i class="fa fa-print fa-2x"></i></a>
+                
+                    
+                </div>                           
 
                 <!--div class="ui-g-6 ui-md-4" style="text-align:right">
                     <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
@@ -63,7 +64,7 @@
             <div class="item-details">
                 <div>
                 <div class="ui-g">
-                    <div class="ui-g-12">Id: <b><a [routerLink]="['/user','edit',insc?.id]" >{{insc?.id}}</a></b></div>
+                    <div class="ui-g-12">Id: <b><a [routerLink]="['/viewinsc',insc?.id]" >{{insc?.id}}</a></b></div>
                     
                     <div class="ui-g-12">Apellido: <b>{{insc.apellido}}</b></div>
                     <div class="ui-g-12">Nombre: <b>{{insc.nombre}}</b></div>
