--- a/src/app/inscripcion/inscripcion.view.component.html
+++ b/src/app/inscripcion/inscripcion.view.component.html
@@ -1,3 +1,5 @@
+<button class="btn btn-primary">Bootstrap </button>
+
 <p-panel header="Visualización de Inscripción">
     <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid">
         <div class="ui-grid-row">
@@ -7,7 +9,7 @@
         </div>    
         <div class="ui-grid-row">
             <div class="ui-grid-col-2">
-                <b>{{insc.id}}</b>
+                <b>{{insc?.id}}</b>
             </div>    
         </div>    
 
@@ -18,7 +20,7 @@
         </div>    
         <div class="ui-grid-row">
             <div class="ui-grid-col-2">
-                <b>{{insc.apellido}}</b>
+                <b>{{insc?.apellido}}</b>
             </div>    
         </div>        
 
@@ -29,7 +31,7 @@
         </div>    
         <div class="ui-grid-row">
             <div class="ui-grid-col-2">
-                <b>{{insc.nombre}}</b>
+                <b>{{insc?.nombre}}</b>
             </div>    
         </div>                      
     </div>        
