--- a/src/app/inscripcion/inscripcion.view.component.html
+++ b/src/app/inscripcion/inscripcion.view.component.html
@@ -1,38 +1,102 @@
-<button class="btn btn-primary">Bootstrap </button>
+
+<p-confirmDialog [style]="{width: '50vw'}" key="positionDialog" 
+ [baseZIndex]="10000"></p-confirmDialog>
 
 <p-panel header="Visualización de Inscripción">
-    <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid">
-        <div class="ui-grid-row">
-            <div class="ui-grid-col-2">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
                 N° Insc.:
             </div>    
-        </div>    
-        <div class="ui-grid-row">
-            <div class="ui-grid-col-2">
+
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
                 <b>{{insc?.id}}</b>
             </div>    
         </div>    
 
-        <div class="ui-grid-row">
-            <div class="ui-grid-col-2">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
                 Apellido:
             </div>    
-        </div>    
-        <div class="ui-grid-row">
-            <div class="ui-grid-col-2">
+
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
                 <b>{{insc?.apellido}}</b>
             </div>    
-        </div>        
+        </div>      
 
-        <div class="ui-grid-row">
-            <div class="ui-grid-col-2">
+
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
                 Nombre:
             </div>    
-        </div>    
-        <div class="ui-grid-row">
-            <div class="ui-grid-col-2">
+
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
                 <b>{{insc?.nombre}}</b>
             </div>    
-        </div>                      
+        </div>     
+
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                Fecha:
+            </div>    
+
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                <b>{{fechaInsc}}</b>
+            </div>    
+        </div>     
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                Periodo Lectivo:
+            </div>    
+
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                <b>{{insc?.periodoLectivo}}</b>
+            </div>    
+        </div>     
+
+
+        <div *ngFor="let inscDet of insc?.divisiones" >  
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                    Turno:
+                </div>    
+
+                <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                    <b>{{inscDet?.turno}}</b>
+                </div>                   
+            </div>    
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                    Curso:
+                </div>    
+
+                <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                    <b>{{inscDet?.curso}}</b>
+                </div>                   
+            </div>    
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                    División:
+                </div>    
+
+                <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                    <b>{{inscDet?.division}}</b>
+                </div>                   
+            </div>                     
+        </div>    
+
     </div>        
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                    <button pButton (click)="onClickAnular()" style="width:100%" label="Anular"> </button>
+            </div>
+            <div>
+                                
+            </div>            
+        </div>
+        
+
+    </div>    
 </p-panel>
