--- a/src/app/alumno/alumno.new.component.html
+++ b/src/app/alumno/alumno.new.component.html
@@ -23,17 +23,31 @@
                             D.N.I *:
                         </div>
                     </div>
+
+                    
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
-                                <p-inputMask  mask="99.999.999" formControlName="dni" ></p-inputMask>
+                                <p-inputMask  mask="99.999.999"  formControlName="dni" ></p-inputMask>
                         </div>
+
+                        <div class="ui-grid-col-2" *ngIf="(showLoading$ | async)">
+                            <p-progressSpinner [style]="{width: '30px', height: '30px'}" strokeWidth="8" fill="#EEEEEE" animationDuration=".5s"></p-progressSpinner>
+                        </div>                         
+
+                        <div class="ui-grid-col-4">
+                            <p-message severity="error" 
+                                text="{{alumnoForm.get('dni').errors?.dniExist}}"
+                                *ngIf="alumnoForm.get('dni').errors?.dniExist">
+                                
+                            </p-message>    
+                        </div> 
+
                         <div class="ui-grid-col-4">
                             <p-message severity="error" text="Ingrese un D.N.I válido" 
                                 *ngIf="alumnoForm.get('dni').dirty && alumnoForm.get('dni').errors && alumnoForm.get('dni').errors.required"></p-message>
                         </div>
                     </div>
                 </div>   
-
                 <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">   
                     <div class="ui-grid-row">
                         <div class="ui-grid-col-2">
@@ -196,7 +210,7 @@
                             </div>
                             <div class="ui-grid-col-4">
                                 <p-message severity="error" text="Ingrese un D.N.I válido" 
-                                    *ngIf="alumnoForm.get('dniTutor').dirty && alumnoForm.get('dni').errors && alumnoForm.get('dniTutor').errors.required"></p-message>
+                                    *ngIf="alumnoForm.get('dniTutor').dirty && alumnoForm.get('dniTutor').errors && alumnoForm.get('dniTutor').errors.required"></p-message>
                             </div>
                         </div>
                     </div>   
@@ -285,19 +299,55 @@
                             </div>
                             <div class="ui-grid-row">    
                                 <div class="ui-grid-col-4">
-                                <p-autoComplete formControlName="estudioPrimarioTutor" [suggestions]="filteredEstudioPrimerio" 
-                                      [size]="30"
-                                    [minLength]="1" [dropdown]="true"></p-autoComplete>
+                                <p-dropdown formControlName="estudioPrimarioTutor_parm" [options]="estudiosTutor" 
+                                    [autoDisplayFirst]="true"
+                                    optionLabel="descripcion"></p-dropdown>
 
                                 </div>
                                 <div class="ui-grid-col-4">
                                     <p-message severity="error" text="Ingrese estudio primario del Tutor" 
-                                        *ngIf="alumnoForm.get('estudioPrimarioTutor').dirty && alumnoForm.get('estudioPrimarioTutor').errors && alumnoForm.get('estudioPrimarioTutor').errors.required"></p-message>
+                                        *ngIf="alumnoForm.get('estudioPrimarioTutor_parm').dirty && alumnoForm.get('estudioPrimarioTutor_parm').errors && alumnoForm.get('estudioPrimarioTutor_parm').errors.required"></p-message>
                                 </div>
                             </div>
-
-
                     </div>        
+
+                    <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+                            <div class="ui-grid-row">
+                                <div class="ui-grid-col-2">
+                                    Estudio Secundario *:
+                                </div>
+                            </div>
+                            <div class="ui-grid-row">    
+                                <div class="ui-grid-col-4">
+                                <p-dropdown formControlName="estudioSecundarioTutor_parm" [options]="estudiosTutor" 
+                                    optionLabel="descripcion"></p-dropdown>
+
+                                </div>
+                                <div class="ui-grid-col-4">
+                                    <p-message severity="error" text="Ingrese estudio secundario del Tutor" 
+                                        *ngIf="alumnoForm.get('estudioSecundarioTutor_parm').dirty && alumnoForm.get('estudioSecundarioTutor_parm').errors && alumnoForm.get('estudioSecundarioTutor_parm').errors.required"></p-message>
+                                </div>
+                            </div>
+                    </div>        
+                    
+                    <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+                            <div class="ui-grid-row">
+                                <div class="ui-grid-col-2">
+                                    Estudio Universitario *:
+                                </div>
+                            </div>
+                            <div class="ui-grid-row">    
+                                <div class="ui-grid-col-4">
+                                <p-dropdown formControlName="estudioUniversitarioTutor_parm" [options]="estudiosTutor" 
+                                    optionLabel="descripcion"></p-dropdown>
+
+                                </div>
+                                <div class="ui-grid-col-4">
+                                    <p-message severity="error" text="Ingrese estudio secundario del Tutor" 
+                                        *ngIf="alumnoForm.get('estudioUniversitarioTutor_parm').dirty && alumnoForm.get('estudioUniversitarioTutor_parm').errors && alumnoForm.get('estudioUniversitarioTutor_parm').errors.required"></p-message>
+                                </div>
+                            </div>
+                    </div>                        
     
                     <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
                             <div class="ui-grid-row">
