--- a/src/app/inscripcion/inscripcion.view.component.html
+++ b/src/app/inscripcion/inscripcion.view.component.html
@@ -5,7 +5,7 @@
 <p-panel header="Visualización de Inscripción">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
                 N° Insc.:
             </div>    
 
@@ -15,7 +15,7 @@
         </div>    
 
         <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
                 Apellido:
             </div>    
 
@@ -26,7 +26,7 @@
 
 
         <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
                 Nombre:
             </div>    
 
@@ -36,8 +36,18 @@
         </div>     
 
         <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
+                Escuela de la que proviene:
+            </div>    
+
             <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
-                Fecha:
+                <b>{{insc?.escuela}}</b>
+            </div>    
+        </div>         
+
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
+                Fecha Inscripción:
             </div>    
 
             <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
@@ -45,7 +55,7 @@
             </div>    
         </div>     
         <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
                 Periodo Lectivo:
             </div>    
 
@@ -57,7 +67,7 @@
 
         <div *ngFor="let inscDet of insc?.divisiones" >  
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
                     Turno:
                 </div>    
 
@@ -66,7 +76,7 @@
                 </div>                   
             </div>    
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
                     Curso:
                 </div>    
 
@@ -75,7 +85,7 @@
                 </div>                   
             </div>    
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
                     División:
                 </div>    
 
