--- a/src/app/alumno/alumno.list.component.html
+++ b/src/app/alumno/alumno.list.component.html
@@ -1,50 +1,110 @@
+<p-panel header="Listado de Inscripciones">
+    <p-dataView  #dataView [value]="alumnos" [paginator]="true" [rows]="10"
+        [lazy]="true"  (onLazyLoad)="loadData($event)" paginatorPosition="both"
+        [totalRecords]="totalLazyAlumnoLength"> 
+        <p-header>
+            <div class="container">
+               <div class="row" >
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3" 
+                            style="display: inline-flex" >
+                        <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Ordenar Por" (onChange)="onSortChange($event)" [style]="{'min-width':'140px'}"></p-dropdown>
+                        <div style="position:relative"><p-toggleButton  onIcon="fa fa-sort-desc"
+                                (onChange)="onSortChange($event)"
+                                offIcon="fa fa-sort-asc" onLabel="" ofLabel=""  
+                                [(ngModel)]="ascSort"></p-toggleButton>
+                        </div>
+                    </div>    
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3" >
+                        <p-dropdown [options]="filterOptions" [(ngModel)]="filterKey" placeholder="Filtrar Por" 
+                            (onChange)="onFilterChange($event)">
+                        
+                        </p-dropdown>
 
-        <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
-            <div class="ui-grid-row">
-                <div class="ui-grid-col-2">
-                    Filtro:
-                </div>
-            </div>
-            <div class="ui-grid-row">  
-                  
-                <div class="ui-grid-col-4">
-                    <input type="text" [formControl]="searchControl" placeholder="search">                             
-                </div>
-            </div>
-        </div>   
-<div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">        
-<p-virtualScroller [value]="alumnos" scrollHeight="500px" [itemSize]="130" [rows]="10" [cache]="false" 
-    [lazy]="true" (onLazyLoad)="loadData($event)" [totalRecords]="totalLazyAlumnoLength">
-        <ng-template let-alumno pTemplate="item">
-            <div class="ui-g-12 ui-md-8">
-                <div class="ui-g">
-                    <div class="ui-g-2 ui-sm-6">id: </div>
-                    <div class="ui-g-10 ui-sm-6">
-                        <a [routerLink]="['/alumno','edit',alumno?.id]" (click)="selectAlumno($event)">{{alumno?.id}}</a>
+                    </div>  
+
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
+                        <div   class="ui-inputgroup">
+                            <span class="ui-inputgroup-addon"><i class="fa fa-search" aria-hidden="true"></i></span>
+                            <input *ngIf="(filterKey=='apellido' || filterKey=='nombre' || filterKey==null)" 
+                                type="text" pInputText   [formControl]="searchControl"  
+                                placeholder="Ingrese texto" />
+
+                            <p-inputMask *ngIf="filterKey=='dni'" 
+                                placeholder="Ingrese número" 
+                                [formControl]="searchDniControl"  mask="99.999.999">
+                            </p-inputMask>    
+                            
+                            <p-calendar *ngIf="filterKey=='fecha'" 
+                                [formControl]="searchFechaControl"
+                                [locale]="es"  [monthNavigator]="true" [yearNavigator]="true" 
+                                dateFormat="dd/mm/yy"  
+                                [showIcon]="true">
+                            </p-calendar>    
+                        </div>    
+    
+
+                        
+                    </div>   
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
+                            <a href="#" #printInsc > <i class="fa fa-print fa-2x"></i></a>
+                    
+                        
+                    </div>                           
+                    
+
+               </div>  
+
+
+
+            </div>   
+
+
+
+        </p-header>   
+
+    <p-footer>Seleccione uno de la lista.</p-footer>
+    <ng-template let-alumno pTemplate="listItem">
+        <div class="container">
+
+                <div class="row">
+                    <div class="col-xs-3 col-sm-3 col-md-4 col-log-3 col-xl-3">
+                        Id:
                     </div>
-        
-                    <div class="ui-g-2 ui-sm-6">dni: </div>
-                    <div class="ui-g-10 ui-sm-6">{{alumno?.dni}}</div>
-        
-                    <div class="ui-g-2 ui-sm-6">cuil: </div>
-                    <div class="ui-g-10 ui-sm-6">{{alumno?.cuil}}</div>
-        
-                    <div class="ui-g-2 ui-sm-6">apellido: </div>
-                    <div class="ui-g-10 ui-sm-6">{{alumno?.apellido}}</div>
-                </div>
-            </div>
-        </ng-template>     
-    <ng-template let-alumno pTemplate="loadingItem">
-            
-            <div class="ui-g-12 ui-md-8">
-                <div  class="ui-g">
-                    <div class="ui-g-12"><div class="empty-car-item-text"></div></div>
-                    <div class="ui-g-12"><div class="empty-car-item-text"></div></div>
-                    <div class="ui-g-12"><div class="empty-car-item-text"></div></div>
-                    <div class="ui-g-12"><div class="empty-car-item-text"></div></div>
-                </div>
-            </div>
-        
-    </ng-template>        
-</p-virtualScroller>        
-</div>
+                    <div class="col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-2">
+                        <b><a [routerLink]="['/alumno/'+editOpt,alumno?.id]" >{{alumno?.id}} </a></b>
+                    </div>    
+                </div>    
+                <div class="row">
+                    <div class="col-xs-3 col-sm-6 col-md-4 col-log-3 col-xl-3">
+                        D.N.I:
+                    </div>
+                    <div class="col-xs-3 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                        <b>{{alumno.dni}}</b>
+                    </div>                      
+                    
+                </div>   
+                <div class="row">
+                    <div class="col-xs-3 col-sm-6 col-md-4 col-log-3 col-xl-3">
+                        Apellido:
+                    </div>
+                    <div class="col-xs-3 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                       <b> {{alumno.apellido}}</b>
+                    </div>                      
+                    
+                </div>  
+                <div class="row">
+
+                    <div class="col-xs-3 col-sm-6 col-md-4 col-log-3 col-xl-3">
+                        Nombre:
+                    </div>
+                    <div class="col-xs-3 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                       <b> {{alumno.nombre}}</b>
+                    </div>                       
+                    
+                </div>    
+              <hr class="mt-2 mb-3"/>   
+        </div>
+    </ng-template>
+         
+    </p-dataView>           
+</p-panel>    
