--- a/src/app/alumno/alumno.list.component.html
+++ b/src/app/alumno/alumno.list.component.html
@@ -25,7 +25,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
                         <div   class="ui-inputgroup">
                             <span class="ui-inputgroup-addon"><i class="fa fa-search" aria-hidden="true"></i></span>
-                            <input *ngIf="(filterKey=='apellido' || filterKey=='nombre' || filterKey==null)" 
+                            <input *ngIf="(filterKey=='apellidoNombre' || filterKey==null)" 
                                 type="text" pInputText   [formControl]="searchControl"  
                                 placeholder="Ingrese texto" />
 
