--- a/src/app/inscripcion/inscripcion.list.component.html
+++ b/src/app/inscripcion/inscripcion.list.component.html
@@ -26,7 +26,7 @@
                 <div class="ui-grid-col-3">
                     <div   class="ui-inputgroup">
                         <span class="ui-inputgroup-addon"><i class="fa fa-search" aria-hidden="true"></i></span>
-                        <input *ngIf="(filterKey=='apellido' || filterKey=='nombre' || filterKey==null)" 
+                        <input *ngIf="(filterKey=='apellidoNombre' || filterKey==null)" 
                             type="text" pInputText   [formControl]="searchControl"  
                             placeholder="Ingrese texto" />
 
