--- a/src/app/inscripcion/inscripcion.list.component.html
+++ b/src/app/inscripcion/inscripcion.list.component.html
@@ -51,6 +51,11 @@
                 
                     
                 </div>                           
+                <div class="ui-grid-col-3">
+                        <a href="#" (click)="onExportXlsClick()" > <i class="fa fa-print fa-2x"></i></a>
+                
+                    
+                </div>                           
 
                 <!--div class="ui-g-6 ui-md-4" style="text-align:right">
                     <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
