--- a/src/app/alumno/alumno.list.component.html
+++ b/src/app/alumno/alumno.list.component.html
@@ -1,62 +1,68 @@
-<p-panel header="Listado de Inscripciones">
+<p-panel header="Listado de Alumnos">
     <p-dataView  #dataView [value]="alumnos" [paginator]="true" [rows]="10"
         [lazy]="true"  (onLazyLoad)="loadData($event)" paginatorPosition="both"
         [totalRecords]="totalLazyAlumnoLength"> 
         <p-header>
             <div class="container">
-               <div class="row" >
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3" 
-                            style="display: inline-flex" >
-                        <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Ordenar Por" (onChange)="onSortChange($event)" [style]="{'min-width':'140px'}"></p-dropdown>
-                        <div style="position:relative"><p-toggleButton  onIcon="fa fa-sort-desc"
-                                (onChange)="onSortChange($event)"
-                                offIcon="fa fa-sort-asc" onLabel="" ofLabel=""  
-                                [(ngModel)]="ascSort"></p-toggleButton>
-                        </div>
-                    </div>    
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3" >
-                        <p-dropdown [options]="filterOptions" [(ngModel)]="filterKey" placeholder="Filtrar Por" 
-                            (onChange)="onFilterChange($event)">
-                        
-                        </p-dropdown>
+                    <div class="input-group form-group">
 
-                    </div>  
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3 input-group-prepend">
+                            <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Ordenar Por" (onChange)="onSortChange($event)" [style]="{'min-width':'140px'}"></p-dropdown>
+                            <div input-group-prepend><p-toggleButton  onIcon="fa fa-sort-desc"
+                                    (onChange)="onSortChange($event)"
+                                    offIcon="fa fa-sort-asc" onLabel="" ofLabel=""  
+                                    [(ngModel)]="ascSort"></p-toggleButton>
+                            </div>
+                        </div> 
+                    </div>
 
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
-                        <div   class="ui-inputgroup">
-                            <span class="ui-inputgroup-addon"><i class="fa fa-search" aria-hidden="true"></i></span>
-                            <input *ngIf="(filterKey=='apellidoNombre' || filterKey==null)" 
-                                type="text" pInputText   [formControl]="searchControl"  
-                                placeholder="Ingrese texto" />
-
-                            <p-inputMask *ngIf="filterKey=='dni'" 
-                                placeholder="Ingrese número" 
-                                [formControl]="searchDniControl"  mask="99.999.999">
-                            </p-inputMask>    
+                    <div class="input-group form-group"> 
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3" >
+                            <p-dropdown [options]="filterOptions" [(ngModel)]="filterKey" placeholder="Filtrar Por" 
+                                (onChange)="onFilterChange($event)">
                             
-                            <p-calendar *ngIf="filterKey=='fecha'" 
-                                [formControl]="searchFechaControl"
-                                [locale]="es"  [monthNavigator]="true" [yearNavigator]="true" 
-                                dateFormat="dd/mm/yy"  
-                                [showIcon]="true">
-                            </p-calendar>    
-                        </div>    
-    
+                            </p-dropdown>
 
+                        </div>  
+
+                            <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
+                                <div  class="input-group-prepend" >
+                                    <span class="input-group-text"><i class="fa fa-search" aria-hidden="true"></i></span>
+                                    <input *ngIf="(filterKey=='apellidoNombre' || filterKey==null)" 
+                                        type="text" pInputText   [formControl]="searchControl"  
+                                        placeholder="Ingrese texto" />
+
+                                    <p-inputMask *ngIf="filterKey=='dni'" 
+                                        placeholder="Ingrese número" 
+                                        [formControl]="searchDniControl"  mask="99.999.999">
+                                    </p-inputMask>    
+                                    
+                                    <p-calendar *ngIf="filterKey=='fecha'" 
+                                        [formControl]="searchFechaControl"
+                                        [locale]="es"  [monthNavigator]="true" [yearNavigator]="true" 
+                                        dateFormat="dd/mm/yy"  
+                                        [showIcon]="true">
+                                    </p-calendar>    
+                                </div>    
+            
+
+                                
+                            </div>   
+                    </div>
+
+                    <div class="input-group form-group">                            
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
+                                <a href="#" #printInsc > <i class="fa fa-print fa-2x"></i></a>
                         
-                    </div>   
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
-                            <a href="#" #printInsc > <i class="fa fa-print fa-2x"></i></a>
-                    
-                        
-                    </div>                           
-                    
+                            
+                        </div>                           
+                    </div>        
 
                </div>  
 
 
 
-            </div>   
+            
 
 
 
@@ -75,7 +81,7 @@
                     </div>    
                 </div>    
                 <div class="row">
-                    <div class="col-xs-3 col-sm-6 col-md-4 col-log-3 col-xl-3">
+                    <div class="col-xs-3 col-sm-3 col-md-4 col-log-3 col-xl-3">
                         D.N.I:
                     </div>
                     <div class="col-xs-3 col-sm-6 col-md-4 col-log-3 col-xl-2">
@@ -84,7 +90,7 @@
                     
                 </div>   
                 <div class="row">
-                    <div class="col-xs-3 col-sm-6 col-md-4 col-log-3 col-xl-3">
+                    <div class="col-xs-3 col-sm-3 col-md-4 col-log-3 col-xl-3">
                         Apellido:
                     </div>
                     <div class="col-xs-3 col-sm-6 col-md-4 col-log-3 col-xl-2">
@@ -94,7 +100,7 @@
                 </div>  
                 <div class="row">
 
-                    <div class="col-xs-3 col-sm-6 col-md-4 col-log-3 col-xl-3">
+                    <div class="col-xs-3 col-sm-3 col-md-4 col-log-3 col-xl-3">
                         Nombre:
                     </div>
                     <div class="col-xs-3 col-sm-6 col-md-4 col-log-3 col-xl-2">
